--- a/modules/currentweather/package.json
+++ b/modules/currentweather/package.json
@@ -11,7 +11,7 @@
   "source": "src/client.js",
   "scripts": {
     "build": "microbundle build --jsx React.createElement --compress false --sourcemap false",
-    "dev": "microbundle watch --jsx React.createElement --compress false --sourcemap false"
+    "dev-": "microbundle watch --jsx React.createElement --compress false --sourcemap false"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -22,7 +22,6 @@
     "weather-icons": "^1.3.2"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
     "microbundle": "^0.9.0"
   }
 }
