--- a/modules/weatherforcast/package.json
+++ b/modules/weatherforcast/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "empty",
+  "name": "weatherforcast",
   "version": "0.0.1",
-  "description": "A empty module used as a filler for positioning.",
+  "description": "A basic weather forcast module.",
   "author": "Jacob Ebey <jacob.ebey@live.com>",
   "license": "MIT",
   "main": "dist/index.js",
@@ -14,8 +14,14 @@
     "dev-": "microbundle watch --jsx React.createElement --compress false --sourcemap false"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "react-fittext": "^1.0.0",
+    "react-icons-weather": "^1.0.5",
+    "weather-icons": "^1.3.2"
   },
   "devDependencies": {
     "microbundle": "^0.9.0"
