--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jacob Ebey <jacob.ebey@live.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node packages/server/dist/index.js",
     "build": "lerna run build",
     "dev": "lerna run --parallel dev",
     "bootstrap": "lerna bootstrap",
