--- a/config/config.json
+++ b/config/config.json
@@ -32,10 +32,19 @@
     {
       "name": "dadjokes",
       "layout": {
+        "x": 4,
+        "y": 4,
+        "w": 8,
+        "h": 2
+      }
+    },
+    {
+      "name": "xkcd",
+      "layout": {
         "x": 0,
         "y": 4,
         "w": 4,
-        "h": 1
+        "h": 2
       }
     },
     {
@@ -44,25 +53,7 @@
         "x": 4,
         "y": 2,
         "w": 8,
-        "h": 3
-      }
-    },
-    {
-      "name": "rss",
-      "config": {
-        "feeds": [
-          "http://rss.nytimes.com/services/xml/rss/nyt/HomePage.xml",
-          "http://rss.cnn.com/rss/cnn_topstories.rss",
-          "http://www.npr.org/rss/rss.php?id=1001",
-          "http://feeds.reuters.com/reuters/topNews",
-          "http://newsrss.bbc.co.uk/rss/newsonline_world_edition/americas/rss.xml"
-        ]
-      },
-      "layout": {
-        "x": 0,
-        "y": 5,
-        "w": 12,
-        "h": 1
+        "h": 2
       }
     }
   ]
